[package]
name = "strategy"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A framework for writing MEV strategies and bots in Rust"
authors = ["Dennoh Peter <mail@dennohpeter.com>"]
categories = ["finance", "cryptography::cryptocurrencies"]
repository = "https://github.com/dennohpeter/strategy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
ethers = "2.0.7"
futures = "0.3.28"
tokio-stream = "0.1.14"
